prod_snapshot_2015-09-24_1030/objects/MarketProducts__c.object
<CustomObject>
    <fields>
        <fullName>Adj_Rate__c</fullName>
        <label>Adj Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <formula>TEXT(Market_Product_List__r.Charge_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Market_Product_List__r.Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Market_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Product_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Product List</label>
        <referenceTo>Market_Product_List__c</referenceTo>
        <relationshipName>Market_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orig_Rate__c</fullName>
        <formula>Market_Product_List__r.Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orig Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <formula>Market_Product_List__r.Includes__c  &amp; &quot; - &quot; &amp; Market_Product_List__r.Conditions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time (Mths)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>IF(Adj_Rate__c &gt; 0,Adj_Rate__c *  Number__c *  Time__c,Orig_Rate__c *  Number__c *  Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Prod Select</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Adj_Rate__c</columns>
        <columns>Billing_Cycle__c</columns>
        <columns>Comments__c</columns>
        <columns>Description__c</columns>
        <columns>Lead__c</columns>
        <columns>Market_Product_List__c</columns>
        <columns>Number__c</columns>
        <columns>Orig_Rate__c</columns>
        <columns>Other__c</columns>
        <columns>Time__c</columns>
        <columns>Total_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{00000000}</displayFormat>
        <label>Prod Select</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prod Selects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>